SUMMARY element: click() for invisible SUMMARY should toggle DETAILS element.

We had unreasonable layoutObject() existence check for DOMActivate event
handling. It's not defined by the stadard.

BUG=681711

Review-Url: https://codereview.chromium.org/2644693003
Cr-Commit-Position: refs/heads/master@{#444679}